[package]
name = "bonfire"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
ash = "0.38.0"
ash-window = "0.13.0"
bytes = "1.10.1"
env_logger = "0.11.8"
gpu-allocator = "0.27.0"
log = "0.4.27"
raw-window-handle = "0.6.2"
shader-slang = "0.1.0"
thiserror = "2.0.12"
winit = "0.30.11"
